syntax = "proto3";

package pb;

import "error.proto";

service Term {
    rpc ListTermInfo(ListTermInfoRequest) returns (ListTermInfoReply) {}
    rpc SaveTerm(SaveTermRequest) returns (SaveTermReply) {}
    rpc SaveTermRisk(SaveTermRiskRequest) returns (SaveTermRiskReply) {}
}

message ListTermInfoRequest {
    int32 page = 1;
    int32 size = 2;
    TermInfoField item = 3;
}

message ListTermInfoReply {
    int32 page = 1;
    int32 size = 2;
    int32 count = 3;
    repeated TermInfoField items = 4;
    error err = 5;
}

message TermInfoField {
    string mchtCd = 1;
    string termId = 2;
    string termTp = 3;
    string belong = 4;
    string belongSub = 5;
    string tmnlMoneyIntype = 6;
    double tmnlMoney = 7;
    string tmnlBrand = 8;
    string tmnlModelNo = 9;
    string tmnlBarcode = 10;
    string deviceCd = 11;
    string installLocation = 12;
    string tmnlIntype = 13;
    string dialOut = 14;
    string dealTypes = 15;
    string recOprId = 16;
    string recUpdOpr = 17;
    string createdAt = 18;
    string updatedAt = 19;
    string appCd = 20;
    string systemFlag = 21;
    string status = 22;
    string activeCode = 23;
    string noFlag = 24;
    string msgResvFld1 = 25;
    string msgResvFld2 = 26;
    string msgResvFld3 = 27;
    string msgResvFld4 = 28;
    string msgResvFld5 = 29;
    string msgResvFld6 = 30;
    string msgResvFld7 = 31;
    string msgResvFld8 = 32;
    string msgResvFld9 = 33;
    string msgResvFld10 = 34;
}

message SaveTermRequest {
    TermInfoField item = 1;
}

message SaveTermReply {
    error err = 1;
}

message TermRiskField {
    string MchtCd           = 1;
    string TermId           = 2;
    string CardType         = 3;
    double TotalLimitMoney  = 4;
    string AccpetStartTime  = 5;
    string AccpetStartDate  = 6;
    string AccpetEndTime    = 7;
    string AccpetEndDate    = 8;
    double SingleLimitMoney = 9;
    string ControlWay       = 10;
    double SingleMinMoney   = 11;
    string TotalPeriod      = 12;
    string RecOprId         = 13;
    string RecUpdOpr        = 14;
    string OperIn           = 15;
}

message SaveTermRiskRequest {
    TermRiskField item = 1;
}

message SaveTermRiskReply {
    error err = 1;
}